# trident-highlevel-studio

./: .gitignore  README.md  git-setup.sh  pyproject.toml
.github/workflows/: ci.yml
demo/scenarios/: abuse_cluster_detected.json  agent_retry_loop.json  healthy_agent.json  tenant_cost_spike.json
docs/: architecture.md  highlevel-integration.md
src/bgi_trident/agents/: highlevel_agent.py
src/bgi_trident/graph/: agent_studio_builder.py  agent_studio_graph_signals.py  schema_agent_studio.py
src/bgi_trident/graph/xgboost/: agent_studio_features.py
src/bgi_trident/mcp/: agent_studio_mcp_server.py  agent_studio_risk_engine.py  highlevel_mcp_client.py
src/bgi_trident/mcp/mock/: highlevel_mock.py
src/bgi_trident/orchestrator/: highlevel_coordinator.py
src/data/: generate_agent_studio_graph.py
tests/: test_agent_studio_graph.py  test_agent_studio_scoring.py  test_cost_diagnosis.py  test_ghl_mcp_client.py  test_highlevel_agent.py
